--- a/index/index.html
+++ b/index/index.html
@@ -1,7 +1,7 @@
 <html>
 
 
-<<head>
+<head>
   <title>Parcel Sandbox</title>
   <meta charset="UTF-8"/>
 
@@ -18,6 +18,6 @@
 
     <canvas id="gameScreen" width="800" height="600"></canvas>
 
-    <script src="src/index.js"></script>
+    <script type = "module" src="index.js"></script>
 </body>
 </html>
