--- a/index/index.html
+++ b/index/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <title>Parcel Sandbox</title>
-  <meta charset="UTF-8"/>
+  <meta charset = "UTF-8"/>
 
 
   <style media="screen">
@@ -16,8 +16,9 @@
 </head>
 <body>
 
-    <canvas id="gameScreen" width="800" height="600"></canvas>
+    <canvas id="gameScreen" width = "800" height = "600"> </canvas>
 
-    <script type = "module" src="index.js"></script>
+    <script type = "module" src = "index.js"> </script>
+    <script type = "moudle" src = "input.js"> </script>
 </body>
 </html>
