--- a/index/index.html
+++ b/index/index.html
@@ -16,7 +16,7 @@
 </head>
 <body>
 
-    <canvas id="gameScreen" width = "800" height = "600"> </canvas>
+    <canvas id="gameScreen" width = "1600" height = "600" style="background: url('/resources/background.png'); background-repeat: no-repeat; background-size: 100% 100%;"> </canvas>
 
     <script type = "module" src = "index.js"> </script>
     <script type = "moudle" src = "input.js"> </script>
