--- a/index/index.html
+++ b/index/index.html
@@ -16,9 +16,9 @@
 </head>
 <body>
 
-    <canvas id="gameScreen" width = "1600" height = "600" style="background: url('/resources/background.png'); background-repeat: no-repeat; background-size: 100% 100%;"> </canvas>
+    <canvas id="gameScreen" width = "1600" height = "600" style="background: url('/index/resources/background.png'); background-repeat: no-repeat; background-size: 100% 100%;"> </canvas>
 
     <script type = "module" src = "index.js"> </script>
-    <script type = "moudle" src = "input.js"> </script>
+    <script type = "module" src = "input.js"> </script>
 </body>
 </html>
