--- a/index/index.html
+++ b/index/index.html
@@ -1,24 +1,22 @@
-<html>
-
-
+<html lang="en">
 <head>
-  <title>Parcel Sandbox</title>
-  <meta charset = "UTF-8"/>
-
-
-  <style media="screen">
-
-    #gameScreen {
-      border: 1px solid black;
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible">
+  <title>Bens Actually working bird</title>
+  <link href="https://fonts.googleapis.com/css?family=Teko:700">
+  <style>
+    canvas{
+      border: 1px solid #000;
+      display: block;
+      margin: 0 auto;
     }
-
+  
+  
   </style>
 </head>
 <body>
-
-    <canvas id="gameScreen" width = "1600" height = "600" style="background: url('/resources/background.png'); background-repeat: no-repeat; background-size: 100% 100%;"> </canvas>
-
-    <script type = "module" src = "index.js"> </script>
-    <script type = "module" src = "input.js"> </script>
+  <canvas id="mycanvas" width="320", height="480"></canvas>
+  <script src="game.js"></script>
 </body>
 </html>
